# endb

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.wasm  Makefile  README.md  ROADMAP.md  endb-slt.asd  endb-test.asd  endb.asd  setup-quicklisp.lisp  shell.nix
.github/: pull_request_template.md
.github/workflows/: build-push-docker-nightly.yml  build-push-docker-release.yml  build-push-docker.yml  ci.yml  clients-javascript-publish.yml  clients-python-publish.yml
_build/: setup.lisp
clients/javascript/: Makefile  README.md  endb.d.mts  endb.mjs  jsdoc-conf.json  package-lock.json  package.json
clients/javascript/doc/: jsdoc.md
clients/python/: Makefile  README.md  endb.py  endb_console.py  pyproject.toml
doc/: roadmap.md
examples/: endb.mjs  endb.py  endb_console.py  endb_repl.py
lib/: Cargo.toml  build.rs  endb.h
lib/endb_arrow/: Cargo.toml
lib/endb_arrow/examples/: arrow.rs  parquet.rs
lib/endb_arrow/src/: lib.rs
lib/endb_cst/: Cargo.toml
lib/endb_cst/examples/: micro_bench_cst.rs  sql.rs
lib/endb_cst/src/: lib.rs  sql.peg  sql.rs  tests.rs
lib/endb_lib/: Cargo.toml  build.rs  endb.h
lib/endb_lib/src/: lib.rs
lib/endb_parser/: Cargo.toml
lib/endb_parser/examples/: micro_bench.rs
lib/endb_parser/src/: lib.rs
lib/endb_parser/src/parser/: ast.rs  expr_parser.rs  sql_parser.rs  util.rs
lib/endb_proc_macro/: Cargo.toml
lib/endb_proc_macro/src/: lib.rs
lib/endb_server/: Cargo.toml  build.rs
lib/endb_server/src/: lib.rs
lib/endb_storage/: Cargo.toml
lib/endb_storage/src/: arrow.rs
lib/examples/: micro_bench.rs
lib/src/: lib.rs  parser.rs
lib/src/parser/: ast.rs  expr_parser.rs  mod.rs  sql_parser.rs  util.rs
slt/: core.lisp  endb-slt.lisp  expr.test  main.lisp
slt/tpch/: core.lisp  tpch_schema.test
slt/tpch/001/: tpch_queries.test
slt/tpch/01/: tpch_queries.test
src/: arrow.lisp  bloom.lisp  core.lisp  endb.lisp  http.lisp  json.lisp  lib.lisp  main.lisp  queue.lisp  slt_endb.c  sql.lisp  storage.lisp  wal.lisp
src/lib/: arrow.lisp  cst.lisp  parser.lisp  server.lisp
src/sql/: compiler.lisp  db.lisp  expr.lisp  parser.lisp  yacc-parser.lisp
src/storage/: buffer-pool.lisp  meta-data.lisp  object-store.lisp  wal.lisp
test/: arrow.lisp  bloom.lisp  core.lisp  http.lisp  json.lisp  lib.lisp  main.lisp  sql.lisp  storage.lisp  wal.lisp
test/lib/: arrow.lisp  cst.lisp  parser.lisp
test/sql/: expr.lisp  parser.lisp
test/tpch/: core.lisp  tpch_schema.test
test/tpch/001/: customer_tbl.test  nation_tbl.test  orders_tbl.test  part_tbl.test  partsupp_tbl.test  region_tbl.test  supplier_tbl.test  tpch.test  tpch_queries.test
test/tpch/01/: customer_tbl.test  part_tbl.test  supplier_tbl.test  tpch_queries.test
test/tpch/1/: tpch_queries.test
tests/: endb-tests.lisp
tpcc/: requirements.txt  tpcc.sh
tpcc/pytpcc/drivers/: endbdriver.py
wasm/: build.lisp  endb.c  endb_console.css  endb_console.html  endb_console.js  endb_console_worker.js
