[workspace]
members = ["endb_parser", "endb_arrow", "endb_lib", "endb_cst", "endb_proc_macro", "endb_server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Håkan Råberg <hakan.raberg@gmail.com>",
    "Steven Deobald <steven@deobald.ca>",
]
license = "AGPL-3.0-only"
repository = "https://github.com/endatabas/endb"
rust-version = "1.70.0"

[workspace.dependencies]
chumsky = { version = "1.0.0-alpha.6", features = ["label", "regex"] }
ariadne = "0.3.0"
arrow2 = { version = "0.18.0", features = ["io_ipc", "io_parquet", "io_parquet_compression"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
insta = { version = "1.29.0", features = ["yaml"] }

[profile.release]
lto = true
codegen-units = 1

[profile.test]
debug = 1
