[workspace]
members = ["endb_arrow", "endb_lib", "endb_cst", "endb_proc_macro", "endb_server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/endatabas/endb"
rust-version = "1.70.0"

[workspace.dependencies]
base64 = "0.21.5"
ariadne = "0.4.0"
arrow = { version = "51", features = ["ffi"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
insta = { version = "1.29.0", features = ["yaml"] }
lazy_static = "1.4.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
debug = 1
