[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "endb"
dynamic = ["version"]
description = "Endatabas Python Client"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/endatabas/endb"
Repository = "https://github.com/endatabas/endb.git"

[project.scripts]
"endb_console" = "endb_console:main"

[project.optional-dependencies]
websockets = ["websockets>=12"]

[tool.setuptools]
py-modules = ["endb", "endb_console"]

[tool.setuptools_scm]
root = "../.."
