[package]
name = "endb_cst"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
ariadne.workspace = true
regex = "1.7"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
endb_proc_macro = { path = "../endb_proc_macro/" }

[dev-dependencies]
insta = "1.29.0"
