[package]
name = "endb_cst"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
ariadne.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
regex = "1.7"
endb_proc_macro = { path = "../endb_proc_macro/" }

[dev-dependencies]
insta = "1.29.0"
