[package]
name = "endb_lib"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "endb"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.0"
endb_parser = { path = "../endb_parser/" }
endb_arrow = { path = "../endb_arrow/" }
arrow2.workspace = true
chumsky.workspace = true

[build-dependencies]
cbindgen = "0.24.3"
