[package]
name = "endb_lib"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "endb"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.0"
endb_arrow = { path = "../endb_arrow/" }
endb_cst = { path = "../endb_cst/" }
endb_server = { path = "../endb_server/" }
base64.workspace = true
arrow.workspace = true
log.workspace = true
sha1_smol = "1.0.0"
uuid =  { version = "1.6.1", features = [ "v4", "fast-rng" ] }
xxhash-rust = { version = "0.8.7", features = ["xxh64"] }

[build-dependencies]
cbindgen = "0.24.3"
