[package]
name = "endb_lib"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "endb"
crate-type = ["cdylib"]

[features]
default = ["server"]
server = ["dep:endb_server"]

[dependencies]
libc = "0.2.0"
endb_arrow = { path = "../endb_arrow/" }
endb_cst = { path = "../endb_cst/" }
endb_server = { path = "../endb_server/", optional = true }
base64.workspace = true
arrow.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1_smol = "1.0.0"
uuid =  { version = "1.6.1", features = [ "v4", "fast-rng" ] }
xxhash-rust = { version = "0.8.7", features = ["xxh64"] }

[build-dependencies]
cbindgen = "0.24.3"
