[package]
name = "endb_server"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
http-body-util = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-gzip", "decompression-gzip", "request-id", "sensitive-headers", "trace"] }
tungstenite = "0.21.0"
hyper-tungstenite = "0.13.0"
percent-encoding = "2.3.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
url = "2.2"
multer = "2"
mime = "0.3.17"
base64.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
